--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Person.</strong>
+                        <strong>Dear Melody.</strong>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Numquam labore omnis minus maiores laboriosam, facere in beatae esse. 
+                            Pangit kayka, miss u.
                         </p>
+                        <img class="pic" src="https://tse4.mm.bing.net/th?id=OIP.HW17EM7udC4eQKDMHBLOBwHaFj&pid=Api&P=0&h=220" alt="missu.img">
                     </div>
                 </div>
             </div>
