--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <audio controls autoplay style="display: none;">
+        <source src="rizz.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <div class="container">
         <div class="envelope-wrapper">
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Melody.</strong>
+                        <strong>Hi Di,</strong>
                         <p>
                             Pangit kayka, miss u.
+                        </p>
+                        <p>
+                            Kung ang bisaya sa coconut kay lubi, kiss ko bi HAHAHA
                         </p>
                         <img class="pic" src="https://tse4.mm.bing.net/th?id=OIP.HW17EM7udC4eQKDMHBLOBwHaFj&pid=Api&P=0&h=220" alt="missu.img">
                     </div>
