--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
                     <div class="text">
                         <strong>Hi Di,</strong>
                         <p>
-                            Pangit kayka, miss u.
-                        </p>
-                        <p>
-                            Kung ang bisaya sa coconut kay lubi, kiss ko bi HAHAHA
+                            Kung ang bisaya sa coconut kay lubi, kiss ko bi HAHAHA miss u.
                         </p>
                         <img class="pic" src="https://tse4.mm.bing.net/th?id=OIP.HW17EM7udC4eQKDMHBLOBwHaFj&pid=Api&P=0&h=220" alt="missu.img">
                     </div>
